--- a/stylesheet.css
+++ b/stylesheet.css
@@ -168,11 +168,12 @@ body h3{
         pointer-events: auto;
 }
 
-.modalWindow > div {
-		width: 500px;
+
+.modalWindow > div{
+		width: 350px;
         position: relative;
         margin: 10% auto;
-		padding:10px 10px 13px 100px;
+		padding:10px 10px 13px 50px;
 		background: -moz-linear-gradient(#fff, #999);
 		background: -webkit-linear-gradient(#fff, #999);
 		background: -o-linear-gradient(#fff, #999);
@@ -180,11 +181,19 @@ body h3{
         background: #fff;
 		word-spacing:10px;
 		letter-spacing:3px;
-		background-color:#AFEEEE;
+		background-color:#44BFCD;
+		opacity: 0.8;
+		border: 1px solid white;
+		box-shadow: 0px 0px 0px 15px rgba(85,158,237,0.7); 
+		color: white;
+		
+		
 }
 
+
+
 /*Modify the title of each lactation room*/
-#firstLine{
+.firstLine{
 	font-family:Garbriola,Harrington,High Tower Text,sans-serif;
 	padding-left:50px;/* make the title appear in the center*/
 	padding-right:50px;
@@ -214,3 +223,14 @@ body h3{
         height: 22px;
         font-size: 10px;
  }
+ 
+ 
+ .firstLine{
+ 
+ font-family:Rage Italic;
+
+ }
+ 
+
+  
+  
