--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body{
 
 /*how to make the block appear in the center of the page*/
 
-#geisel1, #geisel2, #geisel3, #geisel4 
+#geiselrow1, #geiselrow2, #geiselrow3, #geiselrow4 
 {
 	margin-left:auto;
 	margin-right:auto;
@@ -137,6 +137,7 @@ p span{
 	background-color:#FFFFFF;
 	width:150px;
 	height:90px;
+	cursor:pointer;
 }
 
 body h3{
@@ -181,11 +182,11 @@ body h3{
         background: #fff;
 		word-spacing:10px;
 		letter-spacing:3px;
-		background-color:#44BFCD;
+		background-color:#CDEEF1;
 		opacity: 0.8;
 		border: 1px solid white;
-		box-shadow: 0px 0px 0px 15px rgba(85,158,237,0.7); 
-		color: white;
+		box-shadow: 0px 0px 0px 15px rgba(109, 144, 182, 0.7); 
+		color: rgb(134, 76, 76);
 		
 		
 }
@@ -214,6 +215,7 @@ body h3{
         -moz-box-shadow: 1px 1px 3px #000;
         -webkit-box-shadow: 1px 1px 3px #000;
         box-shadow: 1px 1px 3px #000;
+		
     }
     .close {
         position: absolute;
@@ -222,12 +224,14 @@ body h3{
         width: 22px;
         height: 22px;
         font-size: 10px;
+		cursor:pointer;
  }
  
  
  .firstLine{
  
  font-family:Rage Italic;
+ 
 
  }
  
@@ -237,5 +241,3 @@ body h3{
     width: 100%;
 }  
 
-
-  
