--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,37 @@ body{
 	font-family:Courier-New;
 	background-color:white;
 	color:#4d96b8;
+	
+}
+
+#feedback{
+    display:block;
+    top:400px; 
+    left:1200px; 
+    width:100px; 
+    position:fixed; 
+    border:1px solid #000; 
+    padding:10px; 
+    text-align:center; 
+    color:#000; 
+}
+
+* html #feedback{
+    position:absolute;
+}
+
+#feedback a:visited, #feedback a{
+    display:block; 
+    width:100px; 
+    height:20px; 
+    margin:0 auto;  
+    text-align:center; 
+    text-decoration:none; 
+    color:#000;
+}
+
+#login{
+background-image: url("./images/BSB_B241.jpg");
 }
 
 /*how to make the block appear in the center of the page*/
@@ -241,3 +272,23 @@ body h3{
     width: 100%;
 }  
 
+
+#fdBtn
+ {
+        background:transparent url("./images/feedback.png") no-repeat scroll 0px 0px;
+        height:170px;
+        left:0;
+        position:fixed;
+        top:150px;
+        width:40px;
+      }
+ div#fdBtn:hover
+      {
+        background-position:-41px 0px;
+      }
+      #fdBtn a
+      {
+        display:block;
+        height:170px;
+        width:40px;
+      }
