--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,58 @@
 /* CSS Document */
+    .blockbkg {
+      background-color: black;
+      opacity: 90%;
+     
+      background-color: rgba(0,0,0,0.90);
+      width: 100%;
+      min-height: 100%;
+      overflow: hidden;
+      
+      position: fixed;
+      top: 0;
+      left: 0;
+      color: white;
+	  font-family:Arial;
+        font-size:80%;
 
+    }
+    .cont {
+      background-color: white;
+      color: black;
+        font-family:Arial;
+        font-size:13px;
+      border: 1px solid gray;
+      padding: 20px;
+      display:block;
+
+	  border-radius: 10px;
+      background: #fff;
+	  width: 350px;
+      position: relative;
+      margin: 10% auto;
+      background-color:rgba(5, 9, 26, 0.88);
+	  opacity: 0.8;
+      border: 1px solid white;
+	  box-shadow: 0px 0px 0px 15px rgba(109, 144, 182, 0.7); 
+	  color: rgb(163, 135, 135);
+      
+    }
+    div[id^='closebtn'] {
+      width: 10px;
+      height: 10px;
+      padding: 5px;
+      margin: 2px;
+      float: right;
+      top: 0;
+      background-image: url(x.png);
+      background-repeat: no-repeat;
+      background-position:center;
+      background-color: lightgray;
+      display: block;
+    }
+    div[id^='closebtn']:hover {
+      cursor: pointer;
+    }
 /* make link color in header blue */
 a{
 	text-decoration:none;
@@ -175,13 +228,15 @@ input[type=submit] {
 	padding:0px;
 
 }
-/* styling the modal window */
+
+
+/* styling the modal window */ /*
 .modalWindow {
         position: fixed;
         font-family:Arial;
         font-size:80%;
         top: 0; /*make the background appear the same in whole monitor*/
-        right: 0;
+      /*  right: 0;
         bottom: 0;
         left: 0;
         background: rgba(0,0,0,0.8);
@@ -224,7 +279,7 @@ input[type=submit] {
 
 
 /* modal window controls */
-
+/*
 .close {
     background: #606061;
     color: #FFFFFF;
@@ -248,7 +303,7 @@ input[type=submit] {
 	  z-index: 999999;
  }
  
-
+*/
 p{
 	font-family:Perpetua Titling MT;
 	color:#387CD3;
